@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

left to right direction

entity "user" as user {
    *id : number <<generated>>
    --
    style_id : number<<FK>>
    name : string
    email : string
    password : string
    gender : string
    birthday : date
    image : string
    created_at : datetime <<generated>>
    last_login_at : datetime
    is_active : boolean
    role : tinyint
}

entity "user_style" as user_style{
    *id : number <<generated>>
    --
    user_id : number <<FK>>
    style_id : number <<FK>>
    created_at : datetime <<generated>>
}


entity "style" as style {
    *id : number <<generated>>
    --
    name : string
    description : string
    image : string
    created_at : datetime <<generated>>

}

entity "account" as account{
    *id : number <<generated>>
    --
    user_id : number <<FK>>
    style_id : number <<FK>>
    category_id : number <<FK>>
    item_title : string
    item_description : string
    item_price : number
    item_type : tinyint
    item_image : string
    created_at : datetime <<generated>>
}

entity "category" as category {
    *id : number <<generated>>
    --
    name : string
    type : tinyint <<notnull>
}

    ' user ||--|{ style
    ' account }|--|| user
    ' account }|--|| style
    ' account }|--|| category
    ' user_style }|--|| user
    ' user_style }|--|| style

    user ||--|{ account
    account }|--|| category
    account }|--|| style
    user_style }|--|| user
    user_style }|--|| style
    user ||--|{ style

@enduml